--- a/src/scss/modules/tabs.scss
+++ b/src/scss/modules/tabs.scss
@@ -1,10 +1,9 @@
 .nav-tabs {
   float: left;
   width: 100%;
-  margin: 0;
   list-style-type: none;
-  border-bottom: 1px solid transparent;
-
+  border-bottom: 1px solid #00000040;
+  margin: 0 0 10px;
   > li {
     float: left;
     margin-bottom: -1px;
@@ -30,21 +29,33 @@
         color: #555;
         cursor: default;
         background-color: #fff;
-        border-color: transparent;
+        border: solid 1px black;
       }
     }
   }
 }
 
-.tab-content > .tab-pane {
-  float: left;
-  width: 100%;
-  display: none;
+.tab-content{
+   label {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+  }
 
-  &.active {
-    display: block;
-    padding: 10px;
-    background-color: #fff;
-    box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
+   input {
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 15px;
+  }
+
+  > .tab-pane {
+    display: none;
+
+    &.active {
+      display: block;
+      padding: 10px;
+    }
   }
 }
