--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -16,7 +16,7 @@
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
-    ul {
+    > ul {
       white-space: nowrap;
       text-align: center;
       list-style: none;
